fix css align-content: flex-start dans container all trip cards

--- a/public/css/inspire-me.css
+++ b/public/css/inspire-me.css
@@ -93,6 +93,7 @@ h3 {
   margin-left: 50px;
   position: relative;
   flex-wrap: wrap;
+  align-content: flex-start;
 }
 
 .user-picture {
